--- a/index.html
+++ b/index.html
@@ -5,213 +5,213 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BULLPEN APP</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#e3f2fd; }
-    header { background:#0d47a1; color:white; padding:15px; text-align:center; font-size:20px; }
-    .container { padding:20px; text-align:center; }
-    button { 
-      padding:10px 20px; margin:10px; border:none; border-radius:8px; 
-      background:#1976d2; color:white; font-size:16px; cursor:pointer; 
-      box-shadow:0 2px 5px rgba(0,0,0,0.2);
-    }
-    button:disabled { background:gray; cursor:not-allowed; }
-    select, input {
-      padding:10px; margin:10px; border-radius:8px; border:1px solid #1976d2;
-      font-size:16px; width:80%;
-    }
-    .nav { position:fixed; bottom:0; left:0; right:0; background:#1565c0; display:flex; border-top:1px solid #0d47a1; }
-    .nav button { flex:1; border-radius:0; background:none; color:white; font-weight:bold; padding:15px 0; }
-    .hidden { display:none; }
-    .card { background:white; margin:10px auto; padding:15px; border-radius:10px; max-width:400px; box-shadow:0 2px 5px rgba(0,0,0,0.3); }
+    body {font-family: Arial, sans-serif;text-align: center;margin: 0;padding: 0;background: #f1f5f9;}
+    header {background: #2563eb;color: white;padding: 15px;font-size: 20px;font-weight: bold;}
+    .container {padding: 20px;}
+    .card {background: white;margin: 15px auto;padding: 15px;border-radius: 12px;
+           box-shadow: 0 4px 6px rgba(0,0,0,0.1);max-width: 350px;}
+    button {padding: 10px 15px;margin: 5px;border: none;border-radius: 8px;
+            cursor: pointer;background: #2563eb;color: white;font-size: 16px;}
+    button:disabled {background: gray;}
+    nav {position: fixed;bottom: 0;left: 0;right: 0;background: white;
+         display: flex;justify-content: space-around;padding: 10px 0;border-top: 1px solid #ddd;}
+    nav button {flex: 1;margin: 0 5px;}
+    input, select {padding: 8px;margin: 5px;border-radius: 6px;border: 1px solid #ddd;width: 80%;}
   </style>
 </head>
 <body>
-  <header>BULLPEN</header>
 
-  <!-- Home -->
-  <div class="container" id="home">
-    <div class="card">
-      <h2>Home</h2>
-      <button onclick="showWithdraw()">Withdraw</button>
-      <button onclick="showDeposit()">Deposit</button>
-      <button id="checkInBtn" onclick="checkIn()" disabled>Check-in (10% Bonus)</button>
-    </div>
+<header>BULLPEN APP</header>
+
+<!-- Home -->
+<div class="container" id="home">
+  <div class="card">
+    <h3>Deposit</h3>
+    <label>Select Amount:</label><br>
+    <select id="depositAmount">
+      <option value="100">100</option>
+      <option value="200">200</option>
+      <option value="500">500</option>
+      <option value="1000">1000</option>
+    </select><br><br>
+    <label>Method:</label><br>
+    <select id="depositMethod">
+      <option value="bkash">bKash</option>
+      <option value="nagad">Nagad</option>
+    </select><br><br>
+    <button onclick="deposit()">Deposit</button>
   </div>
 
-  <!-- Deposit -->
-  <div class="container hidden" id="deposit">
-    <div class="card">
-      <h2>Deposit</h2>
-      <p><b>bKash:</b> 01956715958</p>
-      <p><b>Nagad:</b> 019567159</p>
-
-      <input type="text" id="depName" placeholder="Enter Your Name"><br>
-
-      <label>Select Amount:</label><br>
-      <select id="depAmount">
-        <option value="100">100 Taka</option>
-        <option value="200">200 Taka</option>
-        <option value="500">500 Taka</option>
-        <option value="1000">1000 Taka</option>
-      </select><br>
-
-      <label>Select Method:</label><br>
-      <select id="depMethod">
-        <option value="bKash">bKash</option>
-        <option value="Nagad">Nagad</option>
-      </select><br>
-
-      <button onclick="makeDeposit()">Confirm Deposit</button>
-    </div>
+  <div class="card">
+    <h3>Withdraw</h3>
+    <input type="number" id="withdrawAmount" placeholder="Enter Amount"><br><br>
+    <select id="withdrawMethod">
+      <option value="bkash">bKash</option>
+      <option value="nagad">Nagad</option>
+    </select><br><br>
+    <button onclick="withdraw()">Withdraw</button>
   </div>
 
-  <!-- Withdraw -->
-  <div class="container hidden" id="withdraw">
-    <div class="card">
-      <h2>Withdraw</h2>
-      <input type="text" id="wdName" placeholder="Enter Your Name"><br>
-
-      <label>Enter Amount (min 200):</label><br>
-      <input type="number" id="wdAmount" placeholder="Amount"><br>
-
-      <label>Select Method:</label><br>
-      <select id="wdMethod">
-        <option value="bKash">bKash</option>
-        <option value="Nagad">Nagad</option>
-      </select><br>
-
-      <button onclick="makeWithdraw()">Confirm Withdraw</button>
-    </div>
+  <div class="card">
+    <h3>Daily Check-in Bonus</h3>
+    <p>Deposit করার পর প্রতিদিন একবার 10% বোনাস পাবেন।</p>
+    <button id="checkInBtn" onclick="checkIn()" disabled>Check In</button>
   </div>
+</div>
 
-  <!-- Profile -->
-  <div class="container hidden" id="profile">
-    <div class="card">
-      <h2>Profile</h2>
-      <p>Balance: <span id="balance">0</span> Taka</p>
-      <p>Daily Income: 40 Taka</p>
-    </div>
+<!-- Profile -->
+<div class="container" id="profile" style="display:none;">
+  <div class="card">
+    <h3>My Profile</h3>
+    <p><b>Balance:</b> <span id="balance">0</span> ৳</p>
+    <p><b>Daily Income:</b> 40 ৳</p>
   </div>
+</div>
 
-  <!-- Refer -->
-  <div class="container hidden" id="refer">
-    <div class="card">
-      <h2>Refer</h2>
-      <p>Your referral link:</p>
-      <input type="text" id="refLink" value="https://myapp.com/?ref=USER123" readonly style="width:90%;padding:5px;">
-      <button onclick="copyRef()">Copy Link</button>
-      <button onclick="shareRef()">Share</button>
-    </div>
+<!-- Refer -->
+<div class="container" id="refer" style="display:none;">
+  <div class="card">
+    <h3>Refer & Earn</h3>
+    <p>Refer link:</p>
+    <input type="text" id="referLink" value="https://yourapp.com/ref123" readonly style="width:100%;"><br><br>
+    <button onclick="copyLink()">Copy Link</button>
+    <button onclick="shareWhatsApp()">WhatsApp</button>
+    <button onclick="shareEmail()">Email</button>
+    <button onclick="shareMessenger()">Messenger</button>
+    <p><b>Refer Bonus:</b> 10% (once, on first deposit)</p>
   </div>
+</div>
 
-  <!-- Bottom Nav -->
-  <div class="nav">
-    <button onclick="showPage('home')">Home</button>
-    <button onclick="showPage('profile')">Profile</button>
-    <button onclick="showPage('refer')">Refer</button>
+<!-- Admin Section -->
+<div class="container" id="admin" style="display:none;">
+  <div class="card">
+    <h3>Admin Panel</h3>
+    <p>Pending Deposits:</p>
+    <div id="pendingList">No pending deposits</div><br>
+    <input type="text" id="txnId" placeholder="Enter Transaction ID"><br>
+    <button onclick="approveDeposit()">Mark Successful</button>
   </div>
+</div>
 
-  <script>
-    let balance = 0;
-    let hasDeposited = false;
-    let referredBonusGiven = false;
-    let lastCheckIn = null;
+<nav>
+  <button onclick="showPage('home')">Home</button>
+  <button onclick="showPage('profile')">Profile</button>
+  <button onclick="showPage('refer')">Refer</button>
+  <button onclick="showPage('admin')">Admin</button>
+</nav>
 
-    function showPage(id) {
-      document.querySelectorAll('.container').forEach(c => c.classList.add('hidden'));
-      document.getElementById(id).classList.remove('hidden');
-    }
+<script>
+  let balance = 0;
+  let lastCheckIn = null;
+  let hasDeposited = false;
+  let dailyIncomeStarted = false;
+  let referBonusGiven = false;
+  let pendingDeposit = {amount: 0, status: "none", txnId: ""};
 
-    function showDeposit() { showPage('deposit'); }
-    function showWithdraw() { showPage('withdraw'); }
+  function showPage(page) {
+    document.getElementById("home").style.display = "none";
+    document.getElementById("profile").style.display = "none";
+    document.getElementById("refer").style.display = "none";
+    document.getElementById("admin").style.display = "none";
+    document.getElementById(page).style.display = "block";
+  }
 
-    // ✅ Deposit system
-    function makeDeposit() {
-      let name = document.getElementById("depName").value;
-      let amount = parseInt(document.getElementById("depAmount").value);
-      let method = document.getElementById("depMethod").value;
+  function deposit() {
+    let amount = parseInt(document.getElementById("depositAmount").value);
+    let method = document.getElementById("depositMethod").value;
+    window.location.href = "https://t.me/yourtelegram"; 
 
-      if (name.trim() === "" || isNaN(amount) || method === "") {
-        alert("Please fill all fields!");
-        return;
-      }
+    pendingDeposit.amount = amount;
+    pendingDeposit.status = "pending";
+    pendingDeposit.txnId = "TXN" + Math.floor(Math.random()*100000);
+    document.getElementById("pendingList").innerHTML = 
+      `<p>TxnID: ${pendingDeposit.txnId} | Amount: ${amount}৳ | Status: Pending</p>`;
+    alert("Transaction pending... Submit TxnID to Admin.");
+  }
 
-      balance += amount;
-      document.getElementById('balance').innerText = balance;
-
+  function approveDeposit() {
+    let adminInput = document.getElementById("txnId").value;
+    if (pendingDeposit.status === "pending" && adminInput === pendingDeposit.txnId) {
+      pendingDeposit.status = "success";
+      balance += pendingDeposit.amount;
       hasDeposited = true;
-      document.getElementById('checkInBtn').disabled = false;
+      document.getElementById("balance").innerText = balance;
+      document.getElementById("checkInBtn").disabled = false;
 
-      // referral bonus (first deposit only)
-      if (!referredBonusGiven) {
-        balance += amount * 0.20; // 20% bonus
-        referredBonusGiven = true;
-        alert("You got 20% referral bonus!");
+      // start daily income
+      if (!dailyIncomeStarted) {
+        setInterval(() => {
+          balance += 40;
+          document.getElementById("balance").innerText = balance;
+        }, 24*60*60*1000); // প্রতি 24 ঘন্টায় একবার 40৳
+        dailyIncomeStarted = true;
       }
 
-      // Telegram redirect
-      let message = `Deposit Request:%0AName: ${name}%0AAmount: ${amount} Taka%0AMethod: ${method}`;
-      window.location.href = `https://t.me/Bullpenpofficial?text=${message}`;
+      // Refer bonus once
+      if (!referBonusGiven) {
+        let bonus = pendingDeposit.amount * 0.10;
+        balance += bonus;
+        referBonusGiven = true;
+        alert("Refer bonus added: " + bonus + "৳");
+      }
+
+      document.getElementById("pendingList").innerHTML = `<p>TxnID: ${pendingDeposit.txnId} | Amount: ${pendingDeposit.amount}৳ | Status: Successful</p>`;
+      alert("Deposit approved successfully!");
+    } else {
+      alert("Invalid Transaction ID!");
     }
+  }
 
-    // ✅ Withdraw system
-    function makeWithdraw() {
-      let name = document.getElementById("wdName").value;
-      let amount = parseInt(document.getElementById("wdAmount").value);
-      let method = document.getElementById("wdMethod").value;
-
-      if (name.trim() === "" || isNaN(amount) || method === "") {
-        alert("Please fill all fields!");
-        return;
-      }
-
-      if (amount < 200) {
-        alert("Minimum withdraw is 200 Taka!");
-        return;
-      }
-
-      if (amount > balance) {
-        alert("Not enough balance!");
-        return;
-      }
-
+  function withdraw() {
+    let amount = parseInt(document.getElementById("withdrawAmount").value);
+    if (amount <= balance) {
       balance -= amount;
-      document.getElementById('balance').innerText = balance;
-
-      // Telegram redirect
-      let message = `Withdraw Request:%0AName: ${name}%0AAmount: ${amount} Taka%0AMethod: ${method}`;
-      window.location.href = `https://t.me/Bullpenpofficial?text=${message}`;
+      document.getElementById("balance").innerText = balance;
+      window.location.href = "https://t.me/yourtelegram"; 
+    } else {
+      alert("Not enough balance!");
     }
+  }
 
-    // ✅ Check-in system
-    function checkIn() {
-      let today = new Date().toDateString();
-      if (lastCheckIn === today) {
-        alert("You already checked in today!");
-        return;
-      }
-      let bonus = balance * 0.10;
-      balance += bonus;
-      document.getElementById('balance').innerText = balance.toFixed(2);
-      lastCheckIn = today;
-      alert("Check-in successful! You got 10% bonus.");
+  function checkIn() {
+    if (!hasDeposited) {
+      alert("First deposit required!");
+      return;
     }
+    let today = new Date().toDateString();
+    if (lastCheckIn === today) {
+      alert("Already checked in today!");
+      return;
+    }
+    let bonus = pendingDeposit.amount * 0.10;
+    balance += bonus;
+    lastCheckIn = today;
+    document.getElementById("balance").innerText = balance;
+    alert("Check-in bonus added: " + bonus + "৳");
+  }
 
-    // ✅ Referral system
-    function copyRef() {
-      let copyText = document.getElementById("refLink");
-      copyText.select();
-      document.execCommand("copy");
-      alert("Referral link copied!");
-    }
+  function copyLink() {
+    let link = document.getElementById("referLink");
+    link.select();
+    document.execCommand("copy");
+    alert("Link copied!");
+  }
 
-    function shareRef() {
-      let link = document.getElementById("refLink").value;
-      if (navigator.share) {
-        navigator.share({ title: "Join BULLPEN", url: link });
-      } else {
-        alert("Sharing not supported, copy the link instead.");
-      }
-    }
-  </script>
+  function shareWhatsApp() {
+    let link = document.getElementById("referLink").value;
+    window.open("https://wa.me/?text=" + encodeURIComponent(link));
+  }
+
+  function shareEmail() {
+    let link = document.getElementById("referLink").value;
+    window.open("mailto:?subject=Join%20Now&body=" + encodeURIComponent(link));
+  }
+
+  function shareMessenger() {
+    let link = document.getElementById("referLink").value;
+    window.open("fb-messenger://share?link=" + encodeURIComponent(link));
+  }
+</script>
+
 </body>
 </html>
